--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
 body {
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    background: #272727;
+    font-size: 1.2em;
+}
+
+button {
+	background: #bfbfbf;
+	color: #004982;
+	border: 1px solid #383838;
+    border-radius: 12px;
+	padding: 10px 20px;
+    margin-bottom: 20px;
+	font-weight: bold;
+	cursor: pointer;
+	outline: 0;
 }
 
 .flex {
@@ -12,6 +27,10 @@ body {
 
 .justify-center {
     justify-content: center;
+}
+
+.column {
+    flex-direction: column;
 }
 
 .container {
@@ -28,7 +47,15 @@ body {
 
 .step {
     display: flex;
-    height: 90vh;
-    border: 2px solid #e2e2e2;
+    height: 600px;
+    padding: 20px;
+    border: 2px solid #5b5b5b;
     border-radius: 20px;
+    background: #22537a;
+    color: #fff;
+    font-weight: bold;
+}
+
+.passo {
+    margin-bottom: 30px;
 }
